<resources>
    <integer name="com_vk_sdk_AppId">7328323</integer>
    <string name="app_name">ETask</string>
    <string name="unknown_error">Произошла неизвестная ошибка. Пожалуйста, попробуйте залогиниться ещё раз</string>
    <string name="rejected_login">Если вы не разрешите доступ к документам, приложение не сможет выполнить свой функицонал</string>
    <string name="share_photos_text">Делитесь фотографиями</string>
    <string name="share_hint_text">Поделитесь фотографией на стене,\nи добавьте к ней описание.</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="share_on_wall">Поделиться на стене</string>
    <string name="add_description">Добавить комментарий</string>
    <string name="send_btn_text">Отправить</string>
</resources>
