<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:background="@drawable/fragment_bg"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:visibility="invisible"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <ImageButton
            android:id="@+id/dismiss_fragment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:src="@drawable/ic_dismiss_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_on_wall"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/post_message"
        android:hint="@string/add_description"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_editbox"
        android:maxHeight="60dp"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill" />
    <ImageView
        android:id="@+id/photo_to_share"
        android:background="@drawable/rounded_btn_bg"
        android:backgroundTint="@color/colorEditBox"
        android:layout_marginTop="12dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_share_outline_56"
        tools:ignore="ContentDescription" />
    <Button
        android:id="@+id/send_btn"
        android:background="@drawable/rounded_btn_bg"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/send_btn_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"/>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:indeterminate="true"
        android:layout_width="44dp"
        android:layout_height="44dp"/>
</LinearLayout>